# GCL

./: .gitignore  App.xaml  App.xaml.cs  CONTRIBUTING.md  Grid Craft Launcher.csproj  Grid Craft Launcher.sln  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  app.manifest  index.html  package.json  pnpm-lock.yaml  vite.config.ts
Properties/: launchSettings.json
gcl_core/: Cargo.toml
gcl_core/src/: checksum.rs  decompress.rs  file.rs  java.rs  launch.rs  lib.rs
gcl_core/src/auth/: microsoft_oauth2.rs  mod.rs  webview_login.rs
gcl_core/src/download/: game_dl_addr.rs  mod.rs
gcl_core/src/path/: constant.rs  mod.rs
gridcore/: Cargo.toml
gridcore/src/auth/: microsoft_oauth2.rs  mod.rs
gridcore/tests/: auth_test.rs
src/: App.vue  disable_shortcuts.ts  index.html  main.js  main.ts  operations_disabling.ts  shortcuts_disabling.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
