[package]
name = "gcl_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
jni = "0.21.1"
zip = "0.6.6"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
sha1 = "0.10.6"
