[package]
name = "gcl"
version = "0.1.0"
description = "A light, swift, simple and cross-platform Minecraft launcher that is written in Rust."
authors = ["TheBlueAlgae"]
license = "GPL-3.0"
repository = "https://github.com/TheBlueAlgae/GCL"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = ["shell-open"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

gridcore = { path = "../gridcore" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
